# azure-maze

./: .gitignore  README.md  config.json  info.md  main.py  physics.py  run.sh  todo.md
3d_viewer/: CMakeLists.txt
3d_viewer/simple_3d_viewer/: main.cpp
azure-testing/fido-write-test/: a.out  main.c
azure-testing/fifo-write-test/: fifoaccess.py  main.c
cpp-track/: CMakeLists.txt  main.cpp
documentation/: info.md  notes.md  past-versions.md  plans.md
graphics-test/: Makefile  graphics.md  sdl  sdl.c
java-gui/: TCPclient.java
java-gui/src/: display.java
kinect/: __init__.py  __main__.py  composition.py  config.json  config.py  linalg_helpers.py  tracked_user.py  tracker.py
kivy-gui/: AdminScreen.kv  DPEAButton.kv  PassCodeScreen.kv  README.md  ex5.py  highscores.py  how-to.txt  main.kv  main.py  scoreinput.py
kivy-gui/pidev/: Joystick.py  LidarSensor.py  MixPanel.py  RPiMIB.py  STEPPER.md  TemperatureSensor.py  slush_manager.py  speaker.py  stepper.py
kivy-gui/pidev/ShutdownModule/: readme
kivy-gui/pidev/ShutdownModule/power_shutdown/: Makefile  power_shutdown.c
kivy-gui/pidev/kivy/: DPEAButton.py  ImageButton.py  PassCodeScreen.kv  PassCodeScreen.py  PauseScreen.kv  PauseScreen.py
tcp/: client  client.c  pyclient.py  server  server.c
tcp-cpp/: Makefile  client.cpp  server.cpp
testing-concepts/: coordtest.c  main.cpp
testing-concepts/fifo-write-test/: a.out
testing/3d_viewer/libs/k4abt_libs/window_controller_3d/: CMakeLists.txt
testing/mouse-control/: mouse.sh
testing/tcp/: pyclient.py  server.c
testing/tcp-cpp/: client.cpp
testing/track-cpp/: CMakeLists.txt
testing/tracking-module/: Makefile
track-cpp/: main.cpp
tracker/: TEMP  a.out  main.cpp  pipetracker.c  pipetracker.cpp  sampletrack.c  sampletrack.cpp  tracker.c  trackhands
tracker-v2/: Makefile  tracker2.c
tracking-module/: CMakeLists.txt  Makefile  anglelog.txt  main.cpp  tracker.c
tracking-module/body-tracking-samples/simple_3d_viewer/: CMakeLists.txt  main.cpp
tracking-module/libs/: CMakeLists.txt
tracking-module/libs/k4abt_libs/window_controller_3d/: CMakeLists.txt
vis_cpp_tracker/: CMakeLists.txt
vis_cpp_tracker/libs/glfw/src/src/: win32_window.c  window.c
vis_cpp_tracker/libs/k4abt_libs/window_controller_3d/: WindowController3d.cpp  WindowController3d.h
vis_cpp_tracker/tracking-module/: CMakeLists.txt  main.cpp
